<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragmentScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BottomActivity">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center|center_horizontal|center_vertical"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayoutChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome">

            <com.example.ezhr.HorizontalCarouselRecyclerView
                android:id="@+id/item_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clipToPadding="false"
                android:overScrollMode="never" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAttendance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="@string/attendance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutChart" />

        <Button
            android:id="@+id/buttonLeave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="@string/leave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAttendance" />

        <Button
            android:id="@+id/buttonClaims"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="@string/claims"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLeave" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>