<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.795">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.EzHR.Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:text="@string/login"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_edt_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/reset_pass_tv"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/forgot_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login" />

            <ImageView
                android:id="@+id/ivBiometricLogin"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_baseline_fingerprint" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="312dp"
            android:layout_height="227dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.71"
            app:srcCompat="@drawable/pay_per_click" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>